crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_not_string_error.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2011: boolean operator requires `Bool` operands but found `String`
