crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_string_add_int_error.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E2009: arithmetic operand must be numeric (`Int`, `Float`, or `Num`) but found `String`
