crates/cypher-sema/src/snapshots/cypher_sema__infer__tests__infer_values_of_node_errors_e5012.snap
---
source: crates/cypher-sema/src/infer.rs
expression: run(&stmt)
---
diagnostics: 1
  E5012: builtin `values` argument has type `Node` but expected `Map`
